# StereoLoopDetector

./: CMakeLists.txt  LICENSE.txt  README.md
demo/: RowMatcher.cpp  RowMatcher.hpp  demoDetectorStereo.h  demo_stereo.cpp
include/StereoLoopDetector/: StereoParameters.h  TemplatedLoopDetector.h
resources/: DBoW2_PR-43.patch  DBoW2_PR-68.patch  DBoW2_PR-69.patch  fs_stereo_parameters.yaml
src/: StereoLoopDetector.cmake.in
